# vfd

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  supervisord.conf
.github/workflows/: release.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
vfd/: dashboard.py  db.py  scrapper.py  utils.py
