[project]
name = "vfd"
version = "0.2.0"
description = "Verifiable Flight Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bump-my-version>=0.32.2",
    "dateparser>=1.2.1",
    "dotenv>=0.9.9",
    "fast-flights>=2.1",
    "loguru>=0.7.3",
    "polars>=1.23.0",
    "rich>=13.9.4",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scrapper = "vfd.scrapper:main"

[tool.bumpversion]
current_version = "0.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Release {new_version}"
allow_dirty = false
commit = true
message = "chore: bump version: {current_version} → {new_version}"
