[project]
name = "vfd"
version = "0.3.1"
description = "Verifiable Flight Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bump-my-version>=0.32.2",
    "dateparser>=1.2.1",
    "dotenv>=0.9.9",
    "fast-flights>=2.1",
    "loguru>=0.7.3",
    "peewee>=3.17.9",
    "polars>=1.23.0",
    "rich>=13.9.4",
    "streamlit>=1.42.2",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scrapper = "vfd.scrapper:main"
dashboard = "vfd.dashboard:entrypoint"

[tool.bumpversion]
current_version = "0.3.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Release {new_version}"
allow_dirty = false
commit = true
message = "chore: bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
